--- a/index.html
+++ b/index.html
@@ -4047,5 +4047,10 @@ body.side-nav-open .site{
                 </table>
             </div>
         </main>
+	    <script>
+		    var referrerCheck = document.referrer;
+console.log(referrerCheck);
+	    </script>
+	    
     </body>
 </html>
